NCI-Agency/anet#375: Avoid scrollbar overlapping content on IE11
Based on Bootstrap 4 fix, see:
  https://github.com/twbs/bootstrap/issues/18543
  https://github.com/twbs/bootstrap/pull/18775/files

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
+/* Copied from https://github.com/twbs/bootstrap/pull/18775/files */
+html {
+  /*
+   * IE11 & Edge make the scrollbar overlap the content and automatically hide itself when not in use.
+   * Unfortunately, the auto-showing of the scrollbar is sometimes too sensitive,
+   * thus making it hard to click on stuff near the right edge of the page.
+   * So we add this style to force IE11 & Edge to use a "normal", non-overlapping, non-auto-hiding scrollbar.
+   * See https://github.com/twbs/bootstrap/issues/18543
+   */
+  -ms-overflow-style: scrollbar;
+}
+
 body {
 	background: #f2f2f2;
 }
